<resources>
    <string name="app_name">KisanPutra</string>
    <string name="action_settings">Settings</string>


    <!-- General -->
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="allow">Allow</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="Rs">\u20B9</string>
    <string name="no_internet">No Internet. Please check your connection.</string>
    <string name="timeout_error">Request taking too much time to process. Please try after some time.</string>
    <string name="undefined_error">Server is not responding. Please try after some time.</string>
    <string name="token_error">Request cannot be processed this time. Please try after some time.</string>
    <string name="google_error">Google Play Services Error</string>
    <string name="google_error_desc">This device is not supported for required Google Play Services</string>
    <string name="missing_perm">Need Permission</string>
    <string name="modify_perm">You can modify your preference from App Settings</string>
    <string name="no_data_found">No Data Found</string>
    <string name="are_you_sure_to_logout">Are you sure to logout ?</string>

    <!-- Messages -->
    <string name="undefineError_Msg">Server is not responding.Please Try Again.</string>
    <string name="loading">Loading...</string>
    <string name="update">UPDATE</string>
    <string name="force_update">A newer version of the application is available, please update to continue further.
    </string>
    <string name="server_error">We are facing some issue over here. Please try again after some time.</string>
    <string name="select_picture_mode">Select Picture mode</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="SELECT_PICTURE">Select Picture</string>
    <string name="permisson_req_msg">Please allow %1s pemission from permission manager to Select image.</string>

    <string name="message_for_users">Please answer at least 10 questions. This will make for a better experience for
        both the mentors and the mentees.
    </string>
    <string name="message_for_professionals">To work as professional, you must complete a personality profile. This
        helps to provide a better experience for both professionals and users.
    </string>
    <string name="amount_message">Please add at least \u20B9 %1$d more in your wallet to proceed.</string>


    <string name="profile_picture">Profile Picture</string>
    <string name="crop_image">Crop Image</string>
    <string name="image_perm">To upload images, On Demand needs access to Camera and Storage</string>
    <string name="permission_req">On Demand needs these permissions to work properly</string>
    <string name="permission_alert">You have denied some permissions. Allow all permissions at Setting -->
        Permissions--> Go To Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Tour-->
    <string name="fresh_milk_deleivered_daily">Fresh Milk Delivered Daily</string>
    <string name="We_Deliver_by_7am_Everyday">We Deliver by 7am Everyday\nand Take orders Till 11pm</string>
    <string name="Choose_from_largest_range">Choose from largest range\nof Kisanputra needs</string>
    <string name="Easily_create_n_modify_your">Easily create &amp; modify your\n subscription plan</string>
    <string name="Why_Subscribe">Why Subscribe</string>
    <string name="Stay_fresh_never_run_out">\u2022 Stay fresh, never run out</string>
    <string name="Save_More_Budget">\u2022 Save More Budget</string>
    <string name="Wake_up_to_real_freshness_everyday">\u2022 Wake up to real freshness everyday</string>
    <string name="its_automatic">\u2022 It\'s automatic</string>

    <!--Login Screen-->
    <string name="Login">Login</string>
    <string name="Enter_your_mobile_number">Enter your mobile number</string>
    <string name="digit_mobile_number">10 digit moblie number</string>
    <string name="OR">OR</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="TrueCaller">TrueCaller</string>

    <!--Details Screens-->
    <string name="Enter_your_Detail">Enter your Detail</string>
    <string name="Name">Name</string>
    <string name="Next">Next</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="Submit">SUBMIT</string>
    <string name="Enter_your_email_address">Enter your email address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Common -->
    <string name="select_image">Select Image</string>
    <string name="GALLERY_UNAVAILABLE">Gallery Unavaliable</string>


    <!--Fonts-->
    <string name="Lato_Regular">Lato-Regular</string>
    <string name="Lato_Bold">Lato-Bold</string>
    <string name="Lato_Light">Lato-Light</string>


    <!--Tour Screen-->
    <string name="New_User_On_boarding">New User On-boarding</string>
    <string name="Please_select_an_option_below">Please select an option below</string>
    <string name="Lets_get_started_with_your_account">Let\’s get started with your account</string>

    <!--Social Credintials-->
    <string name="facebook_app_id">486351015500854</string>
    <string name="fb_login_protocol_scheme">fb486351015500854</string>
    <string name="partnerKey">KJxgK291bfcf78301491385867cd78d238836</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5ae7629e42691a9ede6b940cc37f5e65</string>


    <!--SignUP Screen-->
    <string name="Full_Name">Full Name</string>
    <string name="Email_address">Email address</string>
    <string name="Password">Password</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="Continue">Continue</string>
    <string name="We_need_a_bit_of_information">We need a bit of information…</string>
    <string name="By_signing_up_you_agree_to_our_Terms_of_Service">By signing up you agree to our Terms of Service
    </string>
    <string name="A_valid_number_is_required_to_verify_your_identity">A valid number is required to verify your
        identity.
    </string>
    <string name="enter_full_name">Enter Full Name.</string>
    <string name="enter_Valid_email">Enter Valid Email.</string>
    <string name="enter_valid_password">Enter valid Password.</string>
    <string name="enter_valid_password_lenght">Enter valid password lenght</string>
    <string name="enter_valid_number">Enter valid Number.</string>
    <string name="enter_valid_number_length">Enter valid number lenght</string>
    <string name="Terms_of_Service">Terms of Service</string>

    <!--Otp Screen-->
    <string name="Enter_the_4_digit_code_we_sent_to_your_phone">Enter the 4 digit\ncode we sent to your phone</string>
    <string name="Didn_t_get_the_code">Didn\’t get the code? Resend now</string>
    <string name="Resend_now">Resend now</string>
    <string name="Hi_there_Thanks_for_your_interest_in_running_a_deal">Hi there, Thanks for your interest in running a
        deal with us! Please follow us and enjoy of our work
    </string>
    <string name="Phone_number_not_matched">Phone number not matched</string>

    <!--Login Screen-->
    <string name="Login_Cancelled">Login Cancelled</string>

    <!--Signin Screen-->
    <string name="Need_an_account_Sign_up_here">Need an account? Sign up here.</string>
    <string name="Sign_up_here">Sign up here.</string>
    <string name="Sign_in_to_your_Account">Sign in to your\nAccount</string>
    <string name="I_forgot_my_password">I forgot my password</string>
    <string name="Sign_in_with_social_media">Sign in with social media</string>
    <string name="Enter_phone_number">Enter phone number</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="Email">Email</string>

    <!--Forgot PAssword Screen-->
    <string name="Enter_your_phone_number_to_reterive_your_password_reset_code">Enter your phone number to\nretrive
        your\npassword reset code
    </string>
    <string name="forgot_password">Forgot Password</string>


    <!--Reset Password Screen -->
    <string name="Reset_Password">Reset Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Password_not_matched">Password not matched</string>
    <string name="Set_a_new_password_your_account_using_the_form_below">Set a new password your account using the form
        below.
    </string>

    <!--Cretientials -->
    <!-- <string name="google_api_key">AIzaSyBkguMKTj8tNh329mRDa9XHlugVwmuyvCU</string>-->
    <string name="title_activity_maps">Map</string>


    <!--Home Screen -->
    <string name="nav_schedule">Schedule</string>
    <string name="nav_wattel">Wattel</string>
    <string name="nav_home">Home</string>
    <string name="nav_plans">Plans</string>
    <string name="nav_support">Support</string>

    <string name="nav_drawer_subscription">My Subscription</string>
    <string name="nav_drawer_wallet">My Wallet</string>
    <string name="nav_drawer_billing_history">Billing History</string>
    <string name="nav_drawer_contactus">Contact Us</string>
    <string name="nav_drawer_setting">Setting</string>
    <string name="nav_drawer_aboutus">About Us</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="add_money_text">The feature you\'re looking for generates as much text as you ask for, printing the sentence The quick brown fox jumps over the lazy dog as many times as you need. To generate the text, simply open a new blank document and type the command =rand(p,s), where p is the number of paragraphs you want and s is the number of sentences per paragraph.</string>
    <string name="my_transaction">My Transaction.</string>

</resources>
