<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="Tour3">

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.Tour1_Fragment">



        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/tour3ps"
            tools:context=".ui.Activities.TourMain">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/dimen_80dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_2"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_weight="1.3">

                <TextView
                    android:id="@+id/textView"
                    style="@style/BigTextStyle"
                    android:paddingLeft="@dimen/dimen_80dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Why_Subscribe" />


                <TextView
                    style="@style/NormalTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_80dp"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:textColor="@color/green_text"
                    android:layout_margin="2dp"
                    android:text="@string/Stay_fresh_never_run_out"/>

                <TextView
                    style="@style/NormalTextStyle"
                    android:paddingLeft="@dimen/dimen_80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:textColor="@color/green_text"
                    android:text="@string/Save_More_Budget"/>

                <TextView
                    style="@style/NormalTextStyle"
                    android:paddingLeft="@dimen/dimen_80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:textColor="@color/green_text"
                    android:text="@string/Wake_up_to_real_freshness_everyday"/>


                <TextView
                    style="@style/NormalTextStyle"
                    android:paddingLeft="@dimen/dimen_80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:textColor="@color/green_text"
                    android:text="@string/its_automatic"/>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="0.7">

                <ImageView
                    android:id="@+id/tour_nxt_button"
                    android:layout_width="@dimen/tour_button_dim"
                    android:layout_height="@dimen/tour_button_dim"
                    android:layout_marginRight="@dimen/tour_button_margin"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dimen_32dp"
                    android:src="@drawable/tour_arrow"
                    />



            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</layout>