<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data class="LoginBinding">

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/otp_screen_bg"
        tools:context=".ui.fragments.Tour1_Fragment">


        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".ui.Activities.TourMain">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.7">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/margin_250"
                        android:layout_height="@dimen/dimen_80dp"
                        android:src="@drawable/logo_2"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                        android:id="@+id/textView"
                        style="@style/BigTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/Login"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.027"/>


                <TextView
                        style="@style/NormalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/Enter_your_mobile_number"
                        android:id="@+id/textView2" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/editText_layout"/>

                <FrameLayout
                        android:id="@+id/editText_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="@dimen/fab_margin"
                        android:paddingRight="@dimen/fab_margin"
                        app:layout_constraintHorizontal_bias="0.472"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/next_btn">


                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digit_mobile_number"
                            android:background="@color/login_edit_bg"
                            android:padding="@dimen/fab_margin"
                            android:id="@+id/editText"
                            android:textSize="11sp"
                            android:inputType="number"
                            android:maxLength="10"
                            android:focusableInTouchMode="true"
                            android:layout_margin="@dimen/fab_margin"
                    />

                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                               android:src="@drawable/ic_strawberry"
                               android:layout_gravity="right|top"/>

                </FrameLayout>

                <LinearLayout
                        android:id="@+id/next_btn"
                        android:layout_width="@dimen/dimen_60dp"
                        android:layout_height="@dimen/dimen_60dp"
                        android:scaleType="fitCenter"
                        android:background="@drawable/ic_number_input"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintHorizontal_bias="0.478" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"/>

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        android:text="@string/OR"
                        android:textSize="12sp"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.464"
                        android:id="@+id/textView3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10dp"
                android:layout_weight="1">

                <ImageView
                        android:id="@+id/facebook_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:src="@drawable/facebook_trans"
                    android:background="@color/white"
                    android:padding="@dimen/dimen_2dp"
                />

                <ImageView
                        android:id="@+id/google_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="@color/white"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:padding="@dimen/dimen_2dp"
                    android:src="@drawable/google_plus_trans"/>

                <ImageView
                        android:id="@+id/truecaller_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="@color/white"
                android:src="@drawable/truecaller_trans"
                    android:padding="@dimen/dimen_2dp"/>


            </LinearLayout>

        </LinearLayout>

        </ScrollView>

        <!-- Progress Bar used to show continuous Loader over Screen -->
        <include
                android:id="@+id/progress_layout"
                layout="@layout/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

    </FrameLayout>
</layout>